# radcomp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
data/: known_compressors.yml
notebooks/: EvaluateCompressor.ipynb
radcomp/: compressor.py  condition.py  correlations.py  diffuser.py  geometry.py  impeller.py  inducer.py  plotting.py  thermo.py  utils.py
radcomp/thermolibs/: base.py  coolprop.py  refprop.py
radcompressor/: compressor.py  correlations.py  diffuser.py  impeller.py  inducer.py  plotting.py  thermo.py  utils.py
radcompressor/thermolibs/: coolprop.py
scripts/: consolidate_input_output.py  perturb_geometries.py  sample_conditions.py  sample_geometries.py  sample_map_conditions.py  simulate.py
tests/: test_correlations.py  test_thermo.py
